<resources>
    <string name="app_name">app</string>
    <string name="login">Login</string>
    <string name="loginbtn">Login</string>
    <string name="password">password</string>
    <string name="pwd">password</string>
    <string name="username">username</string>
    <string name="username1">username</string>
    <string name="password1">password</string>
    <string name="topic">Login</string>
    <string name="password2">password</string>
    <string name="password3">password</string>
    <string name="signin1">signin</string>
    <string name="username2">username</string>
    <string name="username3">username</string>
    <string name="fistname">firstname</string>
    <string name="firstname1">firstname</string>
    <string name="email">Email</string>
    <string name="email1">email</string>
    <string name="password4">password</string>
    <string name="btn">sign in</string>
    <string name="signin3">sign in</string>
    <string name="vipcinema">VIP CINEMA</string>
    <string name="password5">password</string>
    <string name="email3">email</string>
    <string name="email5">email</string>
    <string name="password0">password</string>
    <string name="vipcinema1">vipcinema</string>
    <string name="vipcinema0">VIP CINEMA</string>
    <string name="hellovindi">Good Afternoon,Vindi Perera</string>
    <string name="food">Food</string>
    <string name="Movies">Movies</string>
    <string name="q">What\'s your nearest city</string>
    <string name="choice">choose your choice</string>
    <string name="movietitle">killer flower moon</string>
    <string name="movietitle2">poor love</string>
    <string name="action">action</string>
    <string name="resavation">Resevation</string>
    <string name="stranger">Doctor Stranger</string>
    <string name="starngerdoc">Doctor Stranger</string>
    <string name="seat">Choose your seat</string>
    <string name="proceed">Proceed</string>
    <string name="Payment">Payment method</string>
    <string name="recipt">9150002:doctor stranger(2 seats) 2000.00\n2100051:Choclate Popcorn(2)      1000.00\n</string>
    <string name="btn10">pay</string>
    <string name="text">payment successfully</string>
    <string name="total">Total amount : 3000.00</string>
    <string name="BTN">Action</string>
    <string name="btn2">Rommance</string>
    <string name="horror">Horror</string>
    <string name="Acti">Action+Rommance</string>
    <string name="text4">Forget password</string>
    <string name="next">Next</string>
    <string name="click">resevation</string>
    <string name="btnname">Horror+romance</string>
    <string name="btnname2">Comedy</string>
    <string name="btnname3">Drama</string>
    <string name="btnname4">Fantasy</string>
    <string name="filmname1">Poor love</string>
    <string name="filmname">Doctor Stranger</string>
    <string name="filmname3">Killer and Flower Moon</string>
    <string name="filmname4">Resevation</string>
    <string name="filmname5">Resevation</string>
    <string name="filname6">Resevation</string>
</resources>